tests/ui/validate_min_outofbounds.stderr
error: literal out of range for `u8`
 --> $DIR/validate_min_outofbounds.rs:5:19
  |
5 |     #[validate(min = 12345)]
  |                      ^^^^^
  |
  = note: `#[deny(overflowing_literals)]` on by default
  = note: the literal `12345` does not fit into the type `u8` whose range is `0..=255`
