tests/ui/validate_min_outofbounds.rs
use gotham_formdata::FormData;

#[derive(FormData)]
struct MyFormData {
	#[validate(min = 12345)]
	value: u8
}

fn main() {
}
